[tool.poetry]
name = "subreddit-downloader-cli"
version = "0.5.0"
description = "A cli tool to download a full subreddit"
authors = ["Felix Hillebrand <astraljaeger@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "subreddit_downloader_cli"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
asyncpraw = "^7.6.1"
colorama = "^0.4.6"
fleep = "^1.0.1"
xxhash = "^3.2.0"
ubelt = "^1.2.3"
tqdm = "^4.64.1"
retry = "^0.9.2"
plyer = "^2.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.3"

[tool.poetry.scripts]
app = "subreddit-downloader:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
